--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "svelte-kit-cookie-session",
   "version": "0.1.3",
-  "description": "",
+  "description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pixelmund/svelte-kit-cookie-session.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
