--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-kit-cookie-session",
-  "version": "0.2.9",
+  "version": "0.3.0",
   "description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "salteen": "^1.0.0"
   },
   "devDependencies": {
+    "@sveltejs/kit": "^1.0.0-next.65",
     "@types/node": "^14.14.35",
     "rimraf": "^3.0.2",
     "svelte": "^3.35.0",
