--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,11 +21,16 @@ jobs:
       matrix:
         node-version: [14.x, 15.x, 16.x]
 
-    steps:
-      - uses: actions/checkout@v2
+    steps:    
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run test
+          
+      - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+         version: 6.0.2   
+         
+      - run: pnpm install
+      - run: pnpm test
