--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -23,7 +23,8 @@
     "allowJs": true,
     "checkJs": true,
     "paths": {
-      "$lib/*": ["src/lib/*"]
+      "$lib/*": ["src/lib/*"],
+      "$cookieSession/*": ["../src/*"],
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
