--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,22 +27,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           
-          
-      - name: Cache pnpm modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-pnpm-modules
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-       
-          
-          
       - uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2.0.1
         with:
          version: 6.0.2   
-         run_install: true
          
+      - run: pnpm install
       - run: pnpm test
