--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.45",
     "@sveltejs/kit": "next",
     "svelte": "^3.34.0",
     "svelte-check": "^2.0.0",
@@ -18,5 +19,6 @@
   },
   "type": "module",
   "dependencies": {
+    "svelte-kit-cookie-session": "^1.3.2"
   }
 }
