--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "module": "dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    "import": "./dist/index.js"
+    ".": {
+      "import": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "build": "rimraf ./dist && tsc",
