--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "svelte-kit-cookie-session",
-  "version": "1.3.2",
+  "version": "1.4.0-next.2",
   "description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
   "repository": {
     "type": "git",
     "url": "https://github.com/pixelmund/svelte-kit-cookie-session.git"
   },
   "type": "module",
-  "module": "dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     },
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "rimraf ./dist && tsc",
+    "build": "rimraf ./dist && tsc -p tsconfig-cjs.json && tsc -p tsconfig.json && node ./postbuild.mjs",
     "dev": "tsc -w",
     "test": "loadr -- uvu tests",
     "prepublishOnly": "npm run build && npm run test"
@@ -34,7 +36,9 @@
   "devDependencies": {
     "@sveltejs/kit": "^1.0.0-next.111",
     "@types/cookie": "^0.4.1",
+    "@types/express": "^4.17.13",
     "@types/node": "^14.14.35",
+    "express": "^4.17.1",
     "loadr": "^0.1.1",
     "rimraf": "^3.0.2",
     "svelte": "^3.35.0",
