--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,6 @@
   },
   "type": "module",
   "dependencies": {
-    "svelte-kit-cookie-session": "^1.4.0-next.1"
+    "svelte-kit-cookie-session": "^1.4.0"
   }
 }
