--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "loadr": "^0.1.1",
     "rimraf": "^3.0.2",
     "svelte": "^3.35.0",
-    "ts-node": "^9.1.1",
+    "tsm": "^2.2.1",
     "typescript": "^4.2.3",
     "uvu": "^0.6.0-next.1"
   }
