Use WebCryptoApi and change some apis

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-kit-cookie-session",
-  "version": "2.1.4",
+  "version": "3.0.0-next.1",
   "description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
   "repository": {
     "type": "git",
