--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.0.0-next.73",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "1.0.0-next.341",
     "svelte": "^3.47.0",
     "svelte-check": "^2.6.0",
     "svelte-preprocess": "^4.10.5",
@@ -19,6 +19,6 @@
   },
   "type": "module",
   "dependencies": {
-    "svelte-kit-cookie-session": "^2.1.2"
+    "svelte-kit-cookie-session": "3.0.0-next.1"
   }
 }
