--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "svelte-kit-cookie-session",
-  "version": "3.0.0-next.4",
-  "description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pixelmund/svelte-kit-cookie-session.git"
-  },
-  "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "./dist/esm/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
-    },
-    "./package.json": "./package.json"
-  },
-  "scripts": {
-    "build": "rimraf ./dist && tsc -p tsconfig-cjs.json && tsc -p tsconfig.json && node ./postbuild.mjs",
-    "dev": "tsc -w",
-    "test": "loadr -- uvu tests",
-    "prepublishOnly": "npm run build && npm run test"
-  },
-  "keywords": [
-    "SvelteKit",
-    "Cookie",
-    "CookieSession",
-    "Session",
-    "IronSession",
-    "Svelte"
-  ],
-  "author": "pixelmund",
-  "license": "MIT",
-  "devDependencies": {
-    "@sveltejs/kit": "next",
-    "@types/cookie": "^0.4.1",
-    "@types/node": "^17.0.10",
-    "loadr": "^0.1.1",
-    "rimraf": "^3.0.2",
-    "svelte": "^3.46.2",
-    "tsm": "^2.2.1",
-    "typescript": "^4.5.4",
-    "uvu": "^0.6.0-next.1"
-  }
+	"name": "svelte-kit-cookie-session",
+	"version": "3.0.0-next.5",
+	"description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pixelmund/svelte-kit-cookie-session.git"
+	},
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"prepare": "svelte-kit sync",
+		"test": "playwright test",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check --plugin-search-dir=. .",
+		"format": "prettier --write --plugin-search-dir=. .",
+		"package:publish": "pnpm package && cd package && npm publish"
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.22.2",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.7.1",
+		"svelte-preprocess": "^4.10.6",
+		"tslib": "^2.3.1",
+		"typescript": "^4.7.2"
+	},
+	"type": "module",
+	"dependencies": {
+		"zencrypt": "^0.0.5"
+	},
+	"keywords": [
+		"SvelteKit",
+		"Cookie",
+		"CookieSession",
+		"Session",
+		"IronSession",
+		"Svelte"
+	],
+	"author": "pixelmund",
+	"license": "MIT"
 }
