--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-kit-cookie-session",
-	"version": "3.0.0-next.5",
+	"version": "3.0.1",
 	"description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
 	"repository": {
 		"type": "git",
@@ -28,6 +28,7 @@
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
+		"svelte2tsx": "^0.5.10",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2"
 	},
