--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"package": "svelte-kit package",
+		"package": "svelte-package",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync",
 		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -20,18 +19,19 @@
 		"package:publish": "npm run package && cd package && npm publish"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.22.2",
+		"@playwright/test": "^1.25.1",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "^1.0.0-next.375",
-		"prettier": "^2.6.2",
+		"@sveltejs/kit": "^1.0.0-next.437",
+		"@sveltejs/package": "^1.0.0-next.1",
+		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.49.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.6",
-		"svelte2tsx": "^0.5.10",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.2",
-		"vite": "^3.0.0"
+		"svelte-check": "^2.8.1",
+		"svelte-preprocess": "^4.10.7",
+		"svelte2tsx": "^0.5.14",
+		"tslib": "^2.4.0",
+		"typescript": "^4.7.4",
+		"vite": "^3.0.9"
 	},
 	"type": "module",
 	"dependencies": {
