--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-kit-cookie-session",
-	"version": "3.2.2",
+	"version": "3.3.0",
 	"description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
 	"repository": {
 		"type": "git",
@@ -9,22 +9,23 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"package": "svelte-package",
+		"package": "rimraf ./.svelte-kit/types && svelte-package",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. .",
 		"format": "prettier --write --plugin-search-dir=. .",
-		"package:publish": "npm run package && cd package && npm publish"
+		"package:publish": "rimraf ./.svelte-kit/types && npm run package && cd package && npm publish"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.25.1",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "^1.0.0-next.493",
-		"@sveltejs/package": "^1.0.0-next.1",
+		"@sveltejs/package": "^1.0.0-next.6",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
+		"rimraf": "^3.0.2",
 		"svelte": "^3.49.0",
 		"svelte-check": "^2.8.1",
 		"svelte-preprocess": "^4.10.7",
