--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
 	"name": "svelte-kit-cookie-session",
-	"version": "3.4.1",
+	"version": "4.0.0",
 	"description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/pixelmund/svelte-kit-cookie-session.git"
 	},
+	"exports": {
+		"./package.json": "./package.json",
+		"./core": "./core.js",
+		"./handle": "./handle.js",
+		".": "./index.js",
+		"./types": "./types.js",
+		"./utils": "./utils.js"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"package": "rimraf ./.svelte-kit/types && svelte-package",
+		"package": "rimraf ./.svelte-kit/types && svelte-package && cp package.json dist/package.json && cp LICENSE dist/LICENSE && cp README.md dist/README.md",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
@@ -20,24 +28,23 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.25.1",
-		"@sveltejs/adapter-auto": "2.0.0",
-		"@sveltejs/kit": "^1.14.0",
-		"@sveltejs/package": "^1.0.0-next.6",
+		"@sveltejs/adapter-auto": "2.1.0",
+		"@sveltejs/kit": "^1.22.4",
+		"@sveltejs/package": "^2.2.0",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
 		"rimraf": "^3.0.2",
-		"svelte": "^3.49.0",
-		"svelte-check": "^2.8.1",
-		"svelte-preprocess": "^4.10.7",
-		"svelte2tsx": "^0.5.14",
+		"svelte": "^4.1.2",
+		"svelte-check": "^3.4.6",
+		"svelte-preprocess": "^5.0.4",
+		"svelte2tsx": "^0.6.19",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
 		"vite": "^4.2.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"esm-env": "^1.0.0",
-		"zencrypt": "^0.0.7"
+		"@noble/ciphers": "^0.2.0"
 	},
 	"keywords": [
 		"SvelteKit",
