--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-kit-cookie-session",
-	"version": "4.0.0",
+	"version": "4.1.0",
 	"description": "⚒️ Encrypted 'stateless' cookie sessions for SvelteKit",
 	"repository": {
 		"type": "git",
@@ -24,7 +24,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. .",
 		"format": "prettier --write --plugin-search-dir=. .",
-		"package:publish": "npm run package && cd package && npm publish"
+		"package:publish": "npm run package && cd dist && npm publish"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.25.1",
